# ducktheday

./: .gitignore  DEV_NOTES.md  icon_types.py  main.py  pyproject.toml
static/css/: output.css
static/js/: recorder.js
